Adding IngredientService, IngredientServiceImpl, IngredientServiceImplTest, tweaking everything to make it run proper.