@@ -2,10 +2,13 @@ package be.intecbrussel.recipeproject.controllers;
 
 import be.intecbrussel.recipeproject.commands.RecipeCommand;
 import be.intecbrussel.recipeproject.services.RecipeService;
+import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.logging.Log;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.*;
 
+@Slf4j
 @Controller
 public class RecipeController {
 
@@ -17,10 +20,10 @@ public class RecipeController {
     }
 
     @GetMapping
-    @RequestMapping("/recipe/{id}/show")
+    @RequestMapping("recipe/{id}/show")
     public String showById(@PathVariable String id, Model model){
 
-        model.addAttribute("recipe", recipeService.findById(new Long(id)));
+        model.addAttribute("recipe", recipeService.findById(Long.valueOf(id)));
 
         return "recipe/show";
     }
@@ -52,7 +55,7 @@ public class RecipeController {
     @RequestMapping("recipe/{id}/delete")
     public String deleteById(@PathVariable String id){
 
-        //Log.debug("Deleting id:" +id);
+        log.debug("Deleting id:" +id);
 
         recipeService.deleteById(Long.valueOf(id));
         return "redirect:/";
